<resources>
    <string name="app_name">JoseBootcampAndroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Usuario">usuario</string>
    <string name="Contrasena">Constraseña</string>
    <string name="Olvidaste_contrasena">Olvidaste Contraseña</string>
    <string name="Login">Login</string>
    <string name="O_podes_ingresar_con">O podes ingresar con</string>
    <string name="No_tienes_cuenta">No tenes cuenta?</string>
    <string name="Registrate">Registrate</string>
    <string name="Continuar_como_invitado">Continuar como invitado</string>
    <string name="Correo_electronico">Correo Electronico</string>
    <string name="Nombre">Nombre</string>
    <string name="Nombres">Nombres</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Crear_una_cuenta">Crear una cuenta</string>
    <string name="las_mejores_selecciones">Las mejores selecciones</string>
    <string name="La_contrasena_debe_contener_8_catacteres">La contraseña debe contener 8 caracteres</string>
    <string name="Buscar">Buscar</string>
    <string name="Ano_ejemplo">2000</string>
    <string name="Nombre_inicio_ejemplo">Transformer</string>
    <string name="lista_de_seguimiento">Lista de seguimiento</string>
    <string name="watchlist_description">Crea una lista de seguimiento para no perderte ninguna pelicula o serie de tv.</string>
    <string name="user_button_text">Empieza tu lista de seguimiento</string>
    <string name="recently_viewed_title">Vistas recientes</string>
    <string name="recently_viewed_description">No has visitado ninguna página reientemente.</string>
    <string name="favourite_people_title">Personas favoritas</string>
    <string name="favourite_people_description">Aqui van tus personas favoritas</string>
    <string name="rate_movie">Calificar y obtener recomendaciones</string>
    <string name="ratings">Calificaciones</string>
    <string name="ratings_value">0</string>
    <string name="action_back"> Regresar </string>
    <string name="movie_example_text">Queens Gambit</string>
    <string name="movie_description_example">Ambientada en la Guerra fría; una huérfana llamada Beth Harmon con un don para el ajedrez lucha contra las adicciones mientras...</string>
    <string name="movie_category_example">Drama</string>
    <string name="episodes_guide">Guía de episodios</string>
    <string name="number_of_episodes_example">7 episodios</string>
    <string name="add_to_watchlist">Agregar a mi lista de seguimiento</string>
    <string name="transformer_title_movie">Transformer</string>
    <string name="transformer_year_movie">2007</string>
    <string name="transformet_cast_movie">Shia LaBeouf - Megan Fox</string>
    <string name="gambito_de_dama_nombre">Gambito de dama</string>
    <string name="gambito_de_dama_titulo_original">The queens Gambit (título original)</string>
    <string name="gambito_de_dama_fecha">Miniserie de TV 2020-2020 16</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>