<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.josebootcampandroid.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.josebootcampandroid.presentation.ui.movie.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.josebootcampandroid.presentation.ui.movie.detail.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.josebootcampandroid.presentation.ui.login.LogFragment"
        android:label="@string/Login"
        tools:layout="@layout/fragment_log"/>

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.josebootcampandroid.presentation.ui.profile.UserFragment"
        android:label="User"
        tools:layout="@layout/fragment_user"/>

    <fragment
        android:id="@+id/navigation_registration"
        android:name="com.example.josebootcampandroid.presentation.ui.register.fragment_sing_up"
        android:label="@string/Registrate"
        tools:layout="@layout/fragment_sing_up"/>


</navigation>