<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Mustang"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="187dp"
        android:layout_height="146dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imdb_logo" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="@dimen/layout_width_txtview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Usuario"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <TextView
        android:id="@+id/txtContrasena"
        android:layout_width="@dimen/layout_width_txtview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/Contrasena"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtContrasena"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        style="@style/txt_format"/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtOlvidateContrasena"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        style="@style/txt_format"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/txtOlvidateContrasena"
        android:layout_width="@dimen/layout_width_txtview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Olvidaste_contrasena"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <TextView
        android:id="@+id/txtOlvidateContrasena2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:text="@string/O_podes_ingresar_con"
        app:layout_constraintBottom_toTopOf="@id/txtTienesCuenta"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtOlvidateContrasena4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/Continuar_como_invitado"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:text="@string/No_tienes_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/txtOlvidateContrasena4"
        app:layout_constraintEnd_toStartOf="@+id/txtOlvidateContrasena6"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtOlvidateContrasena6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Registrate"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtOlvidateContrasena4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtTienesCuenta" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        style="@style/style_button"
        android:layout_marginBottom="10dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/txtOlvidateContrasena2"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1" />
</androidx.constraintlayout.widget.ConstraintLayout>