<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Mustang"
    tools:context=".LogFragment"
    tools:layout_editor_absoluteX="-9dp"
    tools:layout_editor_absoluteY="17dp">

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="@dimen/layout_width_txtview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/Usuario"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etUsuario"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <EditText
        android:id="@+id/etUsuario"
        style="@style/txt_format"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtContrasena"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtOPodesIngresarCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/O_podes_ingresar_con"
        app:layout_constraintBottom_toTopOf="@+id/imaButtonFacebook"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        style="@style/style_button"
        android:layout_marginBottom="8dp"
        android:text="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/txtOPodesIngresarCon"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtOlvidateContrasena"
        android:layout_width="@dimen/layout_width_txtview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Olvidaste_contrasena"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintBottom_toBottomOf="@id/buttonLogin"/>

    <EditText
        android:id="@+id/etContrasena"
        style="@style/txt_format"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtOlvidateContrasena"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtContrasena"
        android:layout_width="@dimen/layout_width_txtview"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/Contrasena"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/etContrasena"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="187dp"
        android:layout_height="146dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/imdb_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/txtContinuarComoInvitado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/Continuar_como_invitado"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtNoTienesCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="8dp"
        android:text="@string/No_tienes_cuenta"
        app:layout_constraintBottom_toTopOf="@+id/txtContinuarComoInvitado"
        app:layout_constraintStart_toStartOf="@id/guideline1" />

    <TextView
        android:id="@+id/txtRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Registrate"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtContinuarComoInvitado"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/txtNoTienesCuenta" />

    <ImageButton
        android:id="@+id/imaButtonGoogle"
        style="@style/style_social_botton"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/botton_social"
        app:layout_constraintBottom_toTopOf="@+id/txtNoTienesCuenta"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:srcCompat="@drawable/google_1"
        tools:srcCompat="@drawable/google_1" />

    <ImageButton
        android:id="@+id/imgButtonApple"
        style="@style/style_social_botton"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/botton_social"
        app:layout_constraintBottom_toTopOf="@+id/txtNoTienesCuenta"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:srcCompat="@drawable/apple_negro"
        tools:srcCompat="@drawable/apple_negro" />

    <ImageButton
        android:id="@+id/imaButtonFacebook"
        style="@style/style_social_botton"
        android:layout_marginBottom="80dp"
        android:background="@drawable/botton_social"
        app:layout_constraintBottom_toTopOf="@+id/txtNoTienesCuenta"
        app:layout_constraintEnd_toStartOf="@+id/imaButtonGoogle"
        app:layout_constraintStart_toEndOf="@+id/imgButtonApple"
        app:srcCompat="@drawable/facebook_1"
        tools:srcCompat="@drawable/facebook_1" />

</androidx.constraintlayout.widget.ConstraintLayout>